--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,15 @@
 <resources>
     <string name="app_name">ExpandableRecyclerView</string>
     <string name="kotlin">Kotlin</string>
-    <string name="kotlin_message">Kotlin is a cross-platform, statically typed, general-purpose programming language with type inference. Kotlin is designed to interoperate fully with Java, and the JVM version of Kotlin's standard library depends on the Java Class Library, but type inference allows its syntax to be more concise.</string>
-    <string name="c_plus">C++</string>
-    <string name="c_plus_message">C++ is a high-level general-purpose programming language created by Danish computer scientist Bjarne Stroustrup as an extension of the C programming language, or C with Classes.</string>
-    <string name="c_sharp">C#</string>
-    <string name="c_sharp_message">C# is a general-purpose, high-level multi-paradigm programming language. C# encompasses static typing, strong typing, lexically scoped, imperative, declarative, functional, generic, object-oriented, and component-oriented programming disciplines.</string>
+    <string name="kotlin_message">Kotlin is a cross-platform, statically typed, general-purpose programming language with type inference. Kotlin is designed to interoperate fully with Java, and the JVM version of\ Kotlin\'s standard library depends on the Java Class Library, but type inference allows its syntax to be more concise.</string>
+    <string name="c_plus">C\++</string>
+    <string name="c_plus_message">C\++ is a high-level general-purpose programming language created by Danish computer scientist Bjarne Stroustrup as an extension of the C programming language, or C with Classes.</string>
+    <string name="c_sharp">C\#</string>
+    <string name="c_sharp_message">C\# is a general-purpose, high-level multi-paradigm programming language. C\# encompasses static typing, strong typing, lexically scoped, imperative, declarative, functional,\ generic, object-oriented, and component-oriented programming disciplines.</string>
     <string name="java">Java</string>
     <string name="java_message">Java is a high-level, class-based, object-oriented programming language that is designed to have as few implementation dependencies as possible.</string>
     <string name="java_script">Java Script</string>
-    <string name="java_script_message">JavaScript, often abbreviated as JS, is a programming language that is one of the core technologies of the World Wide Web, alongside HTML and CSS. As of 2022, 98% of websites use JavaScript on the client side for webpage behavior, often incorporating third-party libraries.</string>
+    <string name="java_script_message">JavaScript, often abbreviated as JS, is a programming language that is one of the core technologies of the World Wide Web, alongside HTML and CSS. As of 2022, 98\% of websites\ use JavaScript on the client side for webpage behavior, often incorporating third-party libraries.</string>
     <string name="python">Python</string>
     <string name="python_message">Python is a high-level, general-purpose programming language. Its design philosophy emphasizes code readability with the use of significant indentation.</string>
     <string name="swift">Swift</string>
